[tool.poetry]
name = "emperor"
version = "0.1.0"
description = ""
authors = ["leffw <93302536+leffw@users.noreply.github.com>"]

[tool.poetry.dependencies]
python = "^3.9.0"
click = "^8.1.3"
nostr = "^0.0.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
emperor = "emperor.cli:cli"